fix: prevent horizontally scrollable root overflow

--- a/src/layout/components/root.module.scss
+++ b/src/layout/components/root.module.scss
@@ -1,6 +1,6 @@
 .root {
 	position: relative;
 	display: flex;
-	min-width: 100vw;
+	min-width: 100%;
 	min-height: 100vh;
 }
